force-app/main/default/objects/FlashBar_Nav_Item__c/FlashBar_Nav_Item__c.object-meta.xml
<CustomObject>
    <label>FlashBar Nav Item</label>
    <pluralLabel>FlashBar Nav Items</pluralLabel>
    <nameField>
        <label>Nav Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>NAV-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>