force-app/main/default/objects/FlashBar_Nav_Item__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>