force-app/main/default/objects/FlashBar_Nav_Item__c/fields/Target_SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>Target_SOQL_Filter__c</fullName>
    <label>Target SOQL Filter (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>