force-app/main/default/objects/FlashBar_Nav_Item__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ListEditor</fullName>
                <default>true</default>
                <label>ListEditor (Inline Edit Table)</label>
            </value>
            <value>
                <fullName>Page</fullName>
                <label>Page (URL Navigation)</label>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>AI_Prompt</fullName>
                <label>AI Prompt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>