force-app/main/default/objects/FlashBar_Nav_Item__c/fields/Target_URL_Page__c.field-meta.xml
<CustomField>
    <fullName>Target_URL_Page__c</fullName>
    <label>Target URL / Page</label>
    <type>Text</type>
    <length>255</length>
</CustomField>