force-app/main/default/objects/FlashBar_Nav_Item__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>FlashBar Nav Items</relationshipLabel>
    <relationshipName>FlashBar_Nav_Items</relationshipName>
</CustomField>